--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "stable",
     "require": {
         "zendframework/zendframework": "2.*",
-        "kriswallsmith/assetic": "1.*"
+        "kriswallsmith/assetic": "1.2.*@dev"
 
     },
     "require-dev": {
